[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "livoxsdk"
authors = [
    { name="Daniel Simon", email="dansimon09+livoxsdk@gmail.com" },
]
description = "An asyncio library for interfacing with Livox LIDAR devices"
requires-python = ">=3.10"
keywords = ["Livox", "LIDAR", "PointCloud", "3D", "async", "asyncio"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework::AsyncIO",
    "Typing::Typed",
]
dependencies = [
    "crcmod >= 1.7",
    "netifaces >= 0.11",
]
dynamic = ["version", "readme"]

[project.license]
file = "LICENSE"

[project.urls]
"homepage" = "https://github.com/dbs4261/livoxsdk-python"
"repository" = "https://github.com/dbs4261/livoxsdk-python"
"documentation" = "https://github.com/dbs4261/livoxsdk-python"

[tool.setuptools.dynamic]
version = {attr = "livoxsdk.__version__"}
readme = {file = "README.md"}